# phishcollector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: app.js  index.html  nginx.conf  style.css
phishcollector/: cli.py  config.py  database.py  main.py  models.py
phishcollector/api/: routes.py
phishcollector/collector/: browser.py  fingerprint.py  orchestrator.py  spider.py
phishcollector/plugins/: __init__.py  runner.py  urlhaus.py  virustotal.py
scripts/: cleanup.py  submit_feed.py
wordlists/: phishing_paths.txt
